[partition-watchdog] JVM settings for surfire